Made some fixes and added in the feature to jump through sections

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ Blue highlight/link #2D7BB6
 }
 
 body {
+  font-family:"National Park";
   height: 100%;
   width: 100%;
   overflow: none;
@@ -61,51 +62,71 @@ h1, h2 {
 
 #progressBar {
   position: absolute;
-  height: 8px;
+  width:100%;
+  height: 20px;
   bottom: 0;
-  z-index: 1000;
+  z-index: 100;
+  display:none;
+}
+
+#gutter{
+  position: absolute;
+  height: 8px;
+  bottom: 0px;
+  width:100%;
+  background:#ccc;
 }
 
 #progress {
   position:absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 0;
   height: 8px;
   background:#ED225D;
 }
-
-#gutter {
+#progressBar button{
   position:absolute;
-  top: 0;
-  left: 0;
+  width: 2px;
   height: 8px;
-  width: 1920px;
-  background:#ccc;
+  bottom:0px;
+  border:none;
+  background:rgba(70, 70, 70, 0.5);
+  z-index:101;
 }
 
+#progressBar button:hover{
+  background:rgba(70,70,70, 1);
+}
+#progressBar button div{
+  display: none;
+  text-align: left;
+  width:400px;
+  position: absolute;
+  bottom: 12px;
+  color:#F1678E;
+  font-family: "National Park";
+  font-weight:bold;
+  font-size:1.8em;
+}
+
+#progressBar button:hover div{
+  display: block;
+}
 /**
  * UI
  */
 
-#p5 {
-  position:absolute;
-  left: 12px;
-  bottom: 20px;
-  display: none;
-  z-index: 1000;
-}
-
 #pause {
   position:absolute;
   display: none;
-  right: 12px;
-  bottom: 12px;
+  left: 30px;
+  bottom: 40px;
   z-index: 1000;
-  font-size: 32px;
+  font-size: 40px;
   cursor: pointer;
   vertical-align:bottom;
-  color: #ccc;
+  color: rgba(70,70,70, 1);
 }
 
 #pause:hover {
@@ -177,30 +198,36 @@ h1, h2 {
 #videoClip {
   position: absolute;
   display: none; 
-  width:100%;
-  height:auto;
+  /* width:100%;
+  height:auto; */
   /* width: 1920px;
   height: 1080px; */
 
   pointer-events: none;
-  z-index: -10;
+  /* z-index: -10; */
 }
 
 /*this is a canvas*/
 #videoCanvas {
   position: absolute;
-  /* bottom: 0; */
-  /* left: 75%; */
-  margin-left: 10%;
-  width: 1920px;
-  height: 1080px;
-  top:0;
-  left:0;
+  bottom: 0;
+  width: auto;
+  height: 100%;
   pointer-events: none;
   display:none;
-  /* z-index: 200; */
+  z-index: -10;
 }
 
+#videoBackground{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #ffffff;
+  display:block;
+  z-index: -11;
+}
 /**
  *  Preload
  */
@@ -227,13 +254,36 @@ h1, h2 {
 
 #welcome {
   position: absolute;
-  width: 128px;
+  width: 1920px;
   text-align: center;
   top: 50%;
-  left: 50%;
-  margin-left: -64px;
-  margin-top: -64px;
+  transform:translateY(-50%);
   display: none;
+
+}
+#welcome h1{
+  font-size:5em;
+  font-weight:700;
+  color: rgba(70, 70, 70, 0.5);
+  letter-spacing: .03em;
+  word-spacing:0.1em;
+}
+
+#begin{
+  width:180px;
+  padding:10px 10px 10px 10px;
+  border-radius:30px;
+  font-family: "National Park";
+  font-size:1.5em;
+  color:rgba(70,70,70, 0.5);
+  border: 2px solid rgba(70,70,70, 0.5);
+  background:none;
+}
+
+#begin:hover{
+  background:#ED225D;
+  border:2px solid rgba(70,70,70, 0);
+  color:white;
 }
 
 /**
@@ -254,40 +304,67 @@ h1, h2 {
  */
 
 #cta {
-
-  width: 524px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: -262px;
-  margin-top: -128px;
-  background: #fefefe;
+  width: 100%;
+  height:100%;
+  top: 0;
+  left: 0;
+  margin-left: 0;
+  margin-top: 0;
   display: none;
+  opacity:0;
 }
 
-/**
- * Panel Classes
- */
+#cta img{
+  width: 100%;
+  height: auto;
+  position:fixed;
+  z-index:-1;
+}
 
+.panelContainer{
+  width:40vw;
+  top:50%;
+  transform:translateY(-50%);
+  left:2vw;
+  position:absolute
+}
 .panelHeader {
-  background: #ED225D;
-  color: white;
+  color: #9F0C37;
   padding: 16px;
+  font-size:1.6em;
 }
-
 .panelBody {
-  padding: 16px;
-  border: 1px solid #ccc;
-  border-top: none;
-  color: #444;
-  background: white;
+  padding: 32px 16px;
 }
 
 .panelBody .btn {
-  width: 160px;
+  width: 150px;
+  height:150px;
+  border-radius: 30px;
+  border:2px solid #9F0C37;
+  background-color: rgba(255,255,255,0.5);
+  color:#9F0C37;
   margin-bottom: 4px;
-  text-transform: lowercase;
   font-family: "National Park";
+  font-size:1em;
+  margin-right:10px;
+}
+
+.panelBody .btn:hover {
+  background: #ED225D;
+  color: white;
+  border: none;
+}
+
+#donateBox iframe{
+  position:fixed;
+  right:0px;
+  top:50%;
+  transform: translateY(-50%);
+  width:100%;
+  max-width: 600px;
+  min-width: 250px;
+  max-height: none !important;
 }
 
 /** 
